<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ZephyrMobileClientActivity!\n</string>
    <string name="app_name">Zephyr</string>
    <string name="more_zephyrs">More</string>
    <string name="all_label">All</string>
    <string name="personal_label">Personals</string>
    <string name="star_desc">Star</string>
    <string name="zephyrgram_metadata_separator">/</string>
    <string name="next_zephyrgrams">Newer Zephyrs</string>
    <string name="next_zephyrgrams_loading">Loading Newer Zephyrs</string>
    <string name="no_next_zephyrgrams">No Newer Zephyrs</string>
    <string name="prev_zephyrgrams">Older Zephyrs</string>
    <string name="prev_zephyrgrams_loading">Loading Older Zephyrs</string>
    <string name="no_prev_zephyrgrams">No Older Zephyrs</string>
    <string name="personal_zephyr_to_me_prefix">Zephyr from</string>
    <string name="personal_zephyr_from_me_prefix">Zephyr sent to</string>
    <string name="compose_label">Compose</string>
    <string name="refresh_label">Refresh</string>
    <string name="settings_label">Settings</string>
    <string name="feedback_label">Feedback</string>
    <string name="class_compose_label">Class:</string>
    <string name="instance_compose_label">Instance:</string>
    <string name="compose_send">Send</string>
    <string name="recipient_compose_label">To:</string>
    <string name="compose_class_tab_label">Class</string>
    <string name="compose_personal_tab_label">Personal</string>
    <string name="send_start_toast">Sending&#8230;</string>
	<string name="send_success_toast">Sent zephyr</string>
	<string name="send_fail_toast">Failed to send zephyr</string>
	<string name="breadcrumbs_home">Home</string>
	<string name="breadcrumb_separator">></string>
	<string name="zephyrgrams_context_menu_reply_class">Reply to class</string>
	<string name="zephyrgrams_context_menu_reply_personal">Reply to sender</string>
	<string name="class_list_star_class">Star Class</string>
	<string name="class_list_hide_item">Hide Class</string>
	<string name="zephyrgram_list_reply_class">Reply to Class</string>
	<string name="zephyrgram_list_reply_personal">Reply in Personals</string>
	<string name="zephyrgram_list_show_class">View This Class</string>
	<string name="zephyrgram_list_show_instance">View This Instance</string>
	<string name="zephyrgram_list_show_personals">View Personals</string>
	<string name="class_list_unstar_class">Unstar Class</string>
	<string name="class_list_mark_all_read">Mark All Read</string>
	<string name="operation_failed">Operation Failed</string>
	<string name="mark_read_error">Error occurred while marking messages as read</string>
	<string name="load_failed">Failed to load data</string>
	<string name="retry_button">Retry</string>
	<string name="load_error_desc">Load Failed</string>
	<string name="username_label">Username:</string>
	<string name="password_label">Password:</string>
	<string name="credentials_prompt_title">Enter Kerberos Identification</string>
	<string name="submit">Submit</string>
	<string name="cancel">Cancel</string>
	<string name="remember_credentials_label">Remember Me?</string>
	<string name="store_credentials_warning">
	    If you do not choose \"Remember Me,\" you will
	    have to re-enter your password every 24 hours.
	    If you do choose \"Remember Me,\" your username and password will be stored
	    on your device\'s internal storage, read-protected from other applications.
	</string>
	<string name="dialup_label">Server:</string>
	<string name="zserv_prompt_title">Enter Server Information</string>
	<string name="reset_label">Reset Backend</string>
	<string name="clear_hidden_label">Unhide Hidden Classes</string>
</resources>