<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/list_header" />

    <ViewFlipper
        android:id="@+id/list_flipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out" >

        <LinearLayout
            android:id="@+id/list_loading"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
        
        <LinearLayout
            android:id="@+id/list_failed"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/load_error"
                android:contentDescription="@string/load_error_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                android:text="@string/load_failed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/retry_button" />
        </LinearLayout>
    </ViewFlipper>

</LinearLayout>